# ftk2

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  EXACTPV_STATUS.md  EXACTPV_STITCHING_STATUS.md  LICENSE  README.md  REFERENCES.md  RESEARCH_NOTES.md  ROADMAP.md  TODO_EXACTPV.md
docs/: APPROX_PV_API.md  APPROX_PV_IMPLEMENTATION.md  APPROX_PV_SUMMARY.md  ATTRIBUTE_RECORDING.md  COMPARISON_ANALYTICAL_VS_GRADIENT.md  CUDA_STREAMING.md  EXACTPV_QUICKSTART.md  EXACTPV_RESEARCH_PLAN.md  EXACTPV_SAMPLING_VISUALIZATION.md  FEATURE_GAP_ANALYSIS.md  HIGH_LEVEL_API_DESIGN.md  HIGH_LEVEL_API_PROGRESS.md  HIGH_LEVEL_API_STATUS.md  MULTICOMPONENT_ARRAYS.md  NDARRAY_INTEGRATION.md  PARAVIEW_INTEGRATION.md  PYTHON_BINDINGS.md  QUICK_REFERENCE.md  README_SYNTHETIC.md  REFERENCES.md  RESEARCH_NOTES.md  ROADMAP.md  STRATEGIC_ROADMAP.md  STREAMING_EXECUTION.md  SYNTHETIC_TESTS.md  TDGL_DATA_FORMATS.md  TDGL_VORTEX_TRACKING.md  UNDERSTANDING_OUTPUT.md  UNSTRUCTURED_MESH_CONFIG.md  USER_INTERFACE_LAYERS.md  exactpv2.md  exactpv_sos_theory.md
examples/: CMakeLists.txt  approx_pv_highlevel_example.cpp  check_punctures.cpp  config_roundtrip.yaml  cp_with_attributes.yaml  critical_point_2d.cpp  critical_point_2d_cuda.cu  critical_point_2d_streaming_cuda.cu  critical_point_3d.cpp  critical_point_3d_cuda.cu  critical_point_unstructured_2d.cpp  exact_pv_cuda.cu  exact_pv_simple.cpp  exact_pv_stitching.cpp  fiber_3d.cpp  fiber_3d_cuda.cu  high_level_api_demo.cpp  high_level_example_config.yaml  high_level_tracking_test.cpp  levelset_2d.cpp  levelset_2d_cuda.cu  levelset_3d.cpp  levelset_3d_cuda.cu  main.cpp  parallel_vector_approximate.cpp  pv_tet_case_finder.cu  stream_synthetic_example.yaml  stream_tornado_inline.yaml  stream_tornado_small.yaml  streaming_cuda_simple_test.cu  sujudi_haimes_highlevel.yaml  tdgl_vortex_2d.cpp  unstructured_2d_synthetic.yaml  unstructured_3d.cpp  unstructured_3d.cu  unstructured_3d_clean_test.cu  unstructured_3d_extruded_test.cu  unstructured_3d_from_vtu.cu  unstructured_3d_manifold_debug.cu  unstructured_3d_moving_maximum.cu  (+8 more)
include/ftk2/core/: coface_lut.hpp  complex.hpp  cuda_engine.hpp  device_mesh.hpp  engine.hpp  extractor.hpp  feature.hpp  mesh.hpp  parallel.hpp  predicate.hpp  sos.hpp  source.hpp  tracker.hpp  unstructured_mesh.hpp  zero_crossing.hpp
include/ftk2/high_level/: feature_tracker.hpp  tracking_config.hpp
include/ftk2/numeric/: cross_product.hpp  parallel_vector_solver.hpp  pv_tet_classify.hpp
include/ftk2/utils/: vtk.hpp
src/core/: mesh.cpp
src/high_level/: CMakeLists.txt  data_source.cpp  feature_tracker.cpp  tracking_config.cpp
tests/: CMakeLists.txt  test_3d_cp.cpp  test_engine.cpp  test_exactpv.cpp  test_examples.cpp  test_main.cpp  test_mesh.cpp  test_ndarray_strides.cpp  test_parity.cu  test_pv_primitives.cpp  test_sos.cpp  test_unstructured.cpp  test_zero_crossing.cpp
tools/: gen_coface_lut.cpp  pv_tet_visualize.py  test_pv_visualize.py
